Aggiunta pagina di conferma di aver mandato il messaggio

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                         
                     </div>
 
-                    <form action="get">
+                    <form action="result.html" method="get">
                         
                         <div class="input-group mb-3 mx-auto" style="width: 70%;">
                             <input type="text" name="name" class="form-control" placeholder="Name" aria-label="Username" aria-describedby="basic-addon1" required>
